--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
 
     "manifest_version": 2,
     "name": "tab2hyperlinklist",
-    "version": "1.0",
+    "version": "1.1",
   
-    "description": "Prepares a list of hyperlink list from open tabs.",
+    "description": "Prepares a list of hyperlink list from open tabs and put them into clipboard.",
   
     "icons": {
       "48": "icons/icon-48.png",
@@ -21,6 +21,7 @@
     
     "permissions": [
         "<all_urls>",
+        "clipboardWrite",
         "tabs"
       ],
 
